# PA2

cv_04/: a.out  test  test.cpp
cv_05/: a.out  test 3.cpp
cv_06/: a.out  copy_constructor.cpp  prog  prog.cpp  vector.cpp
cv_07/: a.out  test 7.cpp
hw00/: a.out  prog  prog.cpp  test  test 2.cpp  test.cpp  testovaci.cpp
hw01/: a.out  test 2  test 2.cpp
hw01/test 2.dSYM/Contents/: Info.plist
hw02/: a.out  test 5  test 5.cpp
hw02/test 5.dSYM/Contents/: Info.plist
hw03/: a.out  test 6  test 6.cpp
hw04/: .gitignore  test 8  test 8.cpp
hw05/: a.out  ref  test 9.cpp
hw06/: test 10.cpp
hw07/: test 10.cpp
semestral/: CMakeLists.txt  Doxyfile  Makefile  kovarm46  prohlaseni.txt  zadani.txt
semestral/examples/: BadInput.txt  Events.txt  Presentation.txt
semestral/src/: CAddCommand.cpp  CAddCommand.h  CApplication.cpp  CApplication.h  CCalendar.cpp  CCalendar.h  CCommand.cpp  CCommand.h  CDate.cpp  CDate.h  CEvent.cpp  CEvent.h  CFileManager.cpp  CFileManager.h  CFindCommand.cpp  CFindCommand.h  CHelpCommand.cpp  CHelpCommand.h  CInterface.cpp  CInterface.h  CLoadCommand.cpp  CLoadCommand.h  CQuery.cpp  CQuery.h  CQueryCommand.cpp  CQueryCommand.h  CRemoveCommand.cpp  CRemoveCommand.h  CSaveCommand.cpp  CSaveCommand.h  CSubQuery.cpp  CSubQuery.h  CSubQueryName.cpp  CSubQueryName.h  CSubQueryNote.cpp  CSubQueryNote.h  CSubQueryPeople.cpp  CSubQueryPeople.h  CSubQueryPlace.cpp  CSubQueryPlace.h  (+16 more)
semestral/tests/: CCalendarTestFile.cpp  CDateTestFile.cpp  CEventTestFile.cpp  CViewTestFile.cpp  a.out  out
tmp/: a.out  test 8.cpp
(+9 files in other folders)
